add three column to roject

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,8 +1,48 @@
 <!--suppress ALL -->
 <div class="bigwidth">
-  <img class="baner" src="assets/image/baner.png" alt="baner">
+  <img class="baner" src="assets/image/preimer-league.png" alt="baner">
+
+  <div id = all-matches>
+    <app-all-matches></app-all-matches>
+  </div>
+
+  <div id = featured>
+    <app-featured></app-featured>
+  </div>
+
+  <div id = rankings>
+    <app-rankings></app-rankings>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <div id="content">
-    <div class="natn">
+    <div class="matn">
       <h2>شورولت</h2>
       <br>
       <img src="assets/image/CHEVROLET.png" alt="CHEVROLET">
@@ -10,27 +50,27 @@
         شِورولِت، (به انگلیسی: Chevrolet) شرکت خودروسازی آمریکایی است، که هم‌اکنون نام برند گروهی از خودروهایی می‌باشد، که توسط جنرال موتورز تولید می‌شوند. این شرکت، در سال ۱۹۱۱ توسط لوئیس شورولت و ویلیام سی. دورانت تأسیس شد.[۱] شرکت شورولت در سال ۱۹۱۸ توسط کمپانی جنرال موتورز خریداری گردید. شورولت در طول سال‌ها فعالیت در صنعت خودروسازی، مدل‌های مشهوری را به بازار خودروی جهان عرضه کرد، که از شناخته شده‌ترین آنها می‌توان به: ایمپالا، کامارو، اکسپرس، ولت، کروز، کلرادو، تاورا، تراکر، بلیزر، ساب‌اوربان، سلبریتی، نوا، لومینا، مونت کارلو، مونتانا، ون، وگا، کاوالیر، کاپریس، کودیاک و کوروت اشاره نمود
       </p>
     </div>
-    <div class="natn">
+    <div class="matn">
       <h2>استون مارتین</h2>
       <br>
       <img src="assets/image/AstonMartinLogo.svg.png" alt="aston">
       <p>
         استون مارتین، (به انگلیسی: Aston Martin) شرکت خودروسازی بریتانیایی است، که در زمینه مهندسی، طراحی و ساخت خودروهای اسپورت فعالیت می‌کند. این شرکت در سال ۱۹۱۳ توسط رابرت بمفورد و لیونل مارتین تاسیس شد. از سال ۱۹۹۴ تا ۲۰۰۷ استون مارتین بخشی از گروه پرمیر اتوموتیو، به‌شمار می‌آمد، که خود زیرمجموعه‌ای از شرکت فورد محسوب می‌شد. در ۱۲ مارس ۲۰۰۷ در پی انعقاد قراردادی به ارزش ۴۷۹ میلیون پوند، استون مارتین به کنسرسیومی متشکل از شرکت‌های سرمایه‌گذاری ادیم، شرکت الدار و پرو درایو، که توسط دیوید ریچاردز مدیریت می‌شد، واگذار گردید.[۶] اما شرکت فورد ۴۰ میلیون پوند از سهام استون مارتین که معادل ۱۰٪ درصد از کل سهام آن است، را حفظ کرد. با احتساب این مبلغ، ارزش کل شرکت در سال ۲۰۰۷ معادل ۹۲۵ میلیون دلار برآورد گردید 			</p>
     </div>
-    <div class="natn">
+    <div class="matn">
       <h2>بی ام و</h2>
       <br>
       <img src="assets/image/BMW.svg.png" alt="bmw">
       <p>
         بِ‌اِم‌وِ (به آلمانی: BMW) که کوتاه‌شدهٔ عبارتِ «بایِریشه موتورن وِرکه» (به آلمانی: Bayerische Motoren Werke) است و در فارسی معمولاً بِم‌وِ تلفظ می‌شود، به‌معنای صنایع موتوریِ بایرن است، یک شرکت خودروساز آلمانی است، که از تولیدکنندگان به‌نام خودروهای لوکس و موتورسیکلت در جهان به‌شمار می‌آید. دفتر مرکزی این شرکت در شهر مونیخ قرار دارد. شرکت ب‌اِم‌وِ در سال ۱۹۱۶ توسط فرانتس یوزف پوپ تأسیس شد. این شرکت هم‌اکنون مالک شرکت‌های رولز-رویس موتور کارز و مینی است. در سال ۲۰۱۵ ب‌ام‌و بیش از دو میلیون و چهارصدهزار دستگاه وسیلهٔ نقلیه تولید کرد. امروزه اکثریت سهام بِ‌اِم‌وِ در اختیار خانوادهٔ کوانْدْت قرار دارد (اشتفان کواندت ۲۹٪، و سوزان کوانْدْت کلاتن ۲۱٪). حدود نیمی از سهام این شرکت نیز در بازار بورس فرانکفورت در دسترس عموم سهامداران است. 			</p>
     </div>
-    <div class="natn">
+    <div class="matn">
       <h2>آئودی</h2>
       <br>
       <img src="assets/image/Audi_logo_detail.svg.png" alt="audi">
       <p>
         آئودی، (به آلمانی: Audi) شرکت خودروسازی آلمانی و تولیدکنندهٔ خودروهای لوکس است، که دفتر مرکزی آن در شهر اینگولشتات، ایالت بایرن، آلمان قرار دارد و مدل‌هایش را در ۹ کارخانه، که در ۸ کشور اروپایی مستقر می‌باشند، تولید می‌نماید. شرکت آئودی در تاریخ ۱۶ ژوئیه ۱۹۰۹ توسط آگوست هورش و در شهر تسویکاو، آلمان تأسیس شد. این شرکت از سال ۱۹۶۴ یکی از زیرمجموعه‌های گروه فولکس‌واگن به‌شمار می‌آید. آئودی همراه با مرسدس بنز و ب ام و سه خودروساز مشهور و لوکس آلمانی هستند و به‌عنوان پرفروش‌ترین خودروسازان لوکس جهان، شناخته می‌شوند. سهام شرکت خودروسازی آئودی در بازار بورس فرانکفورت معامله می‌شود. 			</div>
-    <div class="natn">
+    <div class="matn">
       <h2>بنــــز</h2>
       <br>
       <img src="assets/image/Mercedes_benz_silverlogo.png" alt="benz">
@@ -46,6 +86,7 @@
       </p>
     </div>
   </div>
+  <br>
   <div id="sidebar">
     <div class="side1">
       <h3>منوی سریع</h3>
@@ -63,6 +104,7 @@
       </ul>
     </div>
   </div>
+  <br>
   <div id="sidebar">
     <div class="side1">
       <h3>پیوندها</h3>
