--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -10,7 +10,7 @@
 }
 
 #header .bigwidth{
-  width: 1000px;
+  width: 95%;
   margin: 0 auto;
   padding: 20px 0 0 0;
 }
@@ -31,7 +31,7 @@
 }
 
 .bigwidth{
-  width: 1000px;
+  width: 1300px;
   margin: 0 auto;
   padding-top: 20px;
 }
