--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,6 @@
 <div id="header">
   <div class="bigwidth">
-    <a href="#">سایت جامع <span>خودرو</span> </a>
-    <span>بانک جامع اطلاعات خودرو در ایران</span>
+    <a href="#">فوتبال ایران </a>
     <a class="logo" href="#">
       <img src="assets/image/logo.svg" alt="web logo">
     </a>
