--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,17 +1,47 @@
 .bigwidth{
-  width: 1000px;
+  width: 95%;
   margin: 0 auto;
   padding-top: 20px;
 }
 
 .bigwidth .baner{
-  width: 1000px;
+  width: 99%;
   border: #DDDDDD 10px solid;
   border-radius: 8px;
 }
 
+#all-matches {
+  width: 20%;
+  float: left;
+  border: 2px solid gray;
+  border-radius: 8px;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 2px 2px #808080;
+  margin: 30px auto;
+}
+
+#rankings {
+  width: 20%;
+  float: right;
+  border: 2px solid gray;
+  border-radius: 8px;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 2px 2px #808080;
+  margin: 30px auto;
+}
+#featured {
+  width: 55%;
+  float: right;
+  align-items: center;
+  border: 2px solid gray;
+  border-radius: 8px;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 2px 2px #808080;
+  margin: 30px auto;
+  margin-right: 45px;
+}
 #content{
-  width: 770px;
+  width: 900px;
   float: right;
   border: 2px solid gray;
   border-radius: 8px;
@@ -39,7 +69,7 @@
 }
 
 #sidebar{
-  width: 200px;
+  width: 350px;
   float: left;
   border: 2px solid gray;
   border-radius: 8px;
@@ -48,7 +78,7 @@
   margin: 0 0 14px -17px;
 }
 
-#content .natn{
+#content .matn{
   border-bottom: #808080 2px solid;
   padding: 11px 3px 23px 3px;
 }
