--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -2,15 +2,15 @@
 <div class="bigwidth">
   <img class="baner" src="assets/image/preimer-league.png" alt="baner">
 
-  <div id = all-matches>
+  <div id = "all-matches">
     <app-all-matches></app-all-matches>
   </div>
 
-  <div id = featured>
+  <div id = "featured">
     <app-featured></app-featured>
   </div>
 
-  <div id = rankings>
+  <div id = "rankings">
     <app-rankings></app-rankings>
   </div>
 
@@ -41,80 +41,80 @@
   <br>
   <br>
   <br>
-  <div id="content">
-    <div class="matn">
-      <h2>شورولت</h2>
-      <br>
-      <img src="assets/image/CHEVROLET.png" alt="CHEVROLET">
-      <p>
-        شِورولِت، (به انگلیسی: Chevrolet) شرکت خودروسازی آمریکایی است، که هم‌اکنون نام برند گروهی از خودروهایی می‌باشد، که توسط جنرال موتورز تولید می‌شوند. این شرکت، در سال ۱۹۱۱ توسط لوئیس شورولت و ویلیام سی. دورانت تأسیس شد.[۱] شرکت شورولت در سال ۱۹۱۸ توسط کمپانی جنرال موتورز خریداری گردید. شورولت در طول سال‌ها فعالیت در صنعت خودروسازی، مدل‌های مشهوری را به بازار خودروی جهان عرضه کرد، که از شناخته شده‌ترین آنها می‌توان به: ایمپالا، کامارو، اکسپرس، ولت، کروز، کلرادو، تاورا، تراکر، بلیزر، ساب‌اوربان، سلبریتی، نوا، لومینا، مونت کارلو، مونتانا، ون، وگا، کاوالیر، کاپریس، کودیاک و کوروت اشاره نمود
-      </p>
-    </div>
-    <div class="matn">
-      <h2>استون مارتین</h2>
-      <br>
-      <img src="assets/image/AstonMartinLogo.svg.png" alt="aston">
-      <p>
-        استون مارتین، (به انگلیسی: Aston Martin) شرکت خودروسازی بریتانیایی است، که در زمینه مهندسی، طراحی و ساخت خودروهای اسپورت فعالیت می‌کند. این شرکت در سال ۱۹۱۳ توسط رابرت بمفورد و لیونل مارتین تاسیس شد. از سال ۱۹۹۴ تا ۲۰۰۷ استون مارتین بخشی از گروه پرمیر اتوموتیو، به‌شمار می‌آمد، که خود زیرمجموعه‌ای از شرکت فورد محسوب می‌شد. در ۱۲ مارس ۲۰۰۷ در پی انعقاد قراردادی به ارزش ۴۷۹ میلیون پوند، استون مارتین به کنسرسیومی متشکل از شرکت‌های سرمایه‌گذاری ادیم، شرکت الدار و پرو درایو، که توسط دیوید ریچاردز مدیریت می‌شد، واگذار گردید.[۶] اما شرکت فورد ۴۰ میلیون پوند از سهام استون مارتین که معادل ۱۰٪ درصد از کل سهام آن است، را حفظ کرد. با احتساب این مبلغ، ارزش کل شرکت در سال ۲۰۰۷ معادل ۹۲۵ میلیون دلار برآورد گردید 			</p>
-    </div>
-    <div class="matn">
-      <h2>بی ام و</h2>
-      <br>
-      <img src="assets/image/BMW.svg.png" alt="bmw">
-      <p>
-        بِ‌اِم‌وِ (به آلمانی: BMW) که کوتاه‌شدهٔ عبارتِ «بایِریشه موتورن وِرکه» (به آلمانی: Bayerische Motoren Werke) است و در فارسی معمولاً بِم‌وِ تلفظ می‌شود، به‌معنای صنایع موتوریِ بایرن است، یک شرکت خودروساز آلمانی است، که از تولیدکنندگان به‌نام خودروهای لوکس و موتورسیکلت در جهان به‌شمار می‌آید. دفتر مرکزی این شرکت در شهر مونیخ قرار دارد. شرکت ب‌اِم‌وِ در سال ۱۹۱۶ توسط فرانتس یوزف پوپ تأسیس شد. این شرکت هم‌اکنون مالک شرکت‌های رولز-رویس موتور کارز و مینی است. در سال ۲۰۱۵ ب‌ام‌و بیش از دو میلیون و چهارصدهزار دستگاه وسیلهٔ نقلیه تولید کرد. امروزه اکثریت سهام بِ‌اِم‌وِ در اختیار خانوادهٔ کوانْدْت قرار دارد (اشتفان کواندت ۲۹٪، و سوزان کوانْدْت کلاتن ۲۱٪). حدود نیمی از سهام این شرکت نیز در بازار بورس فرانکفورت در دسترس عموم سهامداران است. 			</p>
-    </div>
-    <div class="matn">
-      <h2>آئودی</h2>
-      <br>
-      <img src="assets/image/Audi_logo_detail.svg.png" alt="audi">
-      <p>
-        آئودی، (به آلمانی: Audi) شرکت خودروسازی آلمانی و تولیدکنندهٔ خودروهای لوکس است، که دفتر مرکزی آن در شهر اینگولشتات، ایالت بایرن، آلمان قرار دارد و مدل‌هایش را در ۹ کارخانه، که در ۸ کشور اروپایی مستقر می‌باشند، تولید می‌نماید. شرکت آئودی در تاریخ ۱۶ ژوئیه ۱۹۰۹ توسط آگوست هورش و در شهر تسویکاو، آلمان تأسیس شد. این شرکت از سال ۱۹۶۴ یکی از زیرمجموعه‌های گروه فولکس‌واگن به‌شمار می‌آید. آئودی همراه با مرسدس بنز و ب ام و سه خودروساز مشهور و لوکس آلمانی هستند و به‌عنوان پرفروش‌ترین خودروسازان لوکس جهان، شناخته می‌شوند. سهام شرکت خودروسازی آئودی در بازار بورس فرانکفورت معامله می‌شود. 			</div>
-    <div class="matn">
-      <h2>بنــــز</h2>
-      <br>
-      <img src="assets/image/Mercedes_benz_silverlogo.png" alt="benz">
-      <p>
-        مرسدس بنز، (به آلمانی: Mercedes-Benz) شرکت خودروسازی آلمانی است، که در زمینه طراحی و ساخت انواع خودرو، کامیون، اتوبوس و موتورهای درون‌سوز، همچنین ارائه خدمات مالی (لیزینگ و بیمه اتومبیل) و نیز تعمیر خودرو فعالیت می‌نماید. شعار این شرکت «یا بهترین یا هیچ» است. کارخانه مرکزی شرکت مرسدس بنز در منطقه زیندل فینگن واقع در شهر [مریانج]] قرار دارد.[۲] این شرکت ادامه قدیمی‌ترین سازنده خودروهای بنزینی در جهان، یعنی دایملر-موتورن-گیزلشافت است، که در سال ۱۸۹۰ توسط گوتلیب دایملر و کارل بنز تأسیس شده بود. شاخه دیگر از مرسدس-بنز، کمپانی دایملر آگ می‌باشد. در سال ۱۹۰۰ گوتلیب دایملر درگذشت و در ۱۹۰۲ پس از انعقاد قراردادی میان ویلهلم مایباخ و امیل جلینک، شرکت دی‌ام‌جی تولید اتومبیل با برند مرسدس، که از ابتدای نام دختر جلینک، یعنی مرسدس جلینک گرفته شده بود را، آغاز کرد. در سال ۱۹۲۶ شرکت دایملر-بنز از ادغام دو شرکت دایملر-موتورن-گیزلشافت و بنز اند سی تأسیس شد و از تاریخ ۲۸ ژوئن ۱۹۲۶ کارخانجات دو شرکت، تولیدات خود را، با برند مرسدس بنز، به بازار عرضه کردند. 			</p>
-    </div>
-  </div>
-  <div id="sidebar">
-    <div class="side1">
-      <h3>درباره ما</h3>
-      <p>
-        وب سایت خودرو با هدف اطلاع رسانی در حوزه خودرو در آذر 92 فعالیت خود را آغاز نموده است. بزرگترین آرزوی ما این است که علاقمندان صنعت خودرو بتوانند تمامی نیازهای خود را در وب سایت "خودرو" بیابند و امیدواریم که بتوانیم اعتماد و توجه تمامی شما عزیزان را به خود جلب کنیم. همواره پذیرای انتقادات و پیشنهادات شما خواهیم بود.
-      </p>
-    </div>
-  </div>
-  <br>
-  <div id="sidebar">
-    <div class="side1">
-      <h3>منوی سریع</h3>
-      <ul class="navbar">
-        <li><a href="#">صفحه اصلی</a></li>
-        <li><a href="#">قاره سازنده</a>
-          <ul>
-            <li><a href="#">آمریکا</a></li>
-            <li><a href="#">اروپا</a></li>
-            <li><a href="#">آسیا</a></li>
-          </ul>
-        </li>
-        <li><a href="#">درباره ما</a></li>
-        <li><a href="#">ارتباط با ما</a></li>
-      </ul>
-    </div>
-  </div>
-  <br>
-  <div id="sidebar">
-    <div class="side1">
-      <h3>پیوندها</h3>
-      <ul>
-        <li><a href="#">سایت ایران خودرو</a></li>
-        <li><a href="#">سایپا</a></li>
-        <li><a href="#">پارس خودرو</a></li>
-        <li><a href="#">مدیران خودرو</a></li>
-        <li><a href="#">مدیا موتورز</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
+<!--  <div id="content">-->
+<!--    <div class="matn">-->
+<!--      <h2>شورولت</h2>-->
+<!--      <br>-->
+<!--      <img src="assets/image/CHEVROLET.png" alt="CHEVROLET">-->
+<!--      <p>-->
+<!--        شِورولِت، (به انگلیسی: Chevrolet) شرکت خودروسازی آمریکایی است، که هم‌اکنون نام برند گروهی از خودروهایی می‌باشد، که توسط جنرال موتورز تولید می‌شوند. این شرکت، در سال ۱۹۱۱ توسط لوئیس شورولت و ویلیام سی. دورانت تأسیس شد.[۱] شرکت شورولت در سال ۱۹۱۸ توسط کمپانی جنرال موتورز خریداری گردید. شورولت در طول سال‌ها فعالیت در صنعت خودروسازی، مدل‌های مشهوری را به بازار خودروی جهان عرضه کرد، که از شناخته شده‌ترین آنها می‌توان به: ایمپالا، کامارو، اکسپرس، ولت، کروز، کلرادو، تاورا، تراکر، بلیزر، ساب‌اوربان، سلبریتی، نوا، لومینا، مونت کارلو، مونتانا، ون، وگا، کاوالیر، کاپریس، کودیاک و کوروت اشاره نمود-->
+<!--      </p>-->
+<!--    </div>-->
+<!--    <div class="matn">-->
+<!--      <h2>استون مارتین</h2>-->
+<!--      <br>-->
+<!--      <img src="assets/image/AstonMartinLogo.svg.png" alt="aston">-->
+<!--      <p>-->
+<!--        استون مارتین، (به انگلیسی: Aston Martin) شرکت خودروسازی بریتانیایی است، که در زمینه مهندسی، طراحی و ساخت خودروهای اسپورت فعالیت می‌کند. این شرکت در سال ۱۹۱۳ توسط رابرت بمفورد و لیونل مارتین تاسیس شد. از سال ۱۹۹۴ تا ۲۰۰۷ استون مارتین بخشی از گروه پرمیر اتوموتیو، به‌شمار می‌آمد، که خود زیرمجموعه‌ای از شرکت فورد محسوب می‌شد. در ۱۲ مارس ۲۰۰۷ در پی انعقاد قراردادی به ارزش ۴۷۹ میلیون پوند، استون مارتین به کنسرسیومی متشکل از شرکت‌های سرمایه‌گذاری ادیم، شرکت الدار و پرو درایو، که توسط دیوید ریچاردز مدیریت می‌شد، واگذار گردید.[۶] اما شرکت فورد ۴۰ میلیون پوند از سهام استون مارتین که معادل ۱۰٪ درصد از کل سهام آن است، را حفظ کرد. با احتساب این مبلغ، ارزش کل شرکت در سال ۲۰۰۷ معادل ۹۲۵ میلیون دلار برآورد گردید 			</p>-->
+<!--    </div>-->
+<!--    <div class="matn">-->
+<!--      <h2>بی ام و</h2>-->
+<!--      <br>-->
+<!--      <img src="assets/image/BMW.svg.png" alt="bmw">-->
+<!--      <p>-->
+<!--        بِ‌اِم‌وِ (به آلمانی: BMW) که کوتاه‌شدهٔ عبارتِ «بایِریشه موتورن وِرکه» (به آلمانی: Bayerische Motoren Werke) است و در فارسی معمولاً بِم‌وِ تلفظ می‌شود، به‌معنای صنایع موتوریِ بایرن است، یک شرکت خودروساز آلمانی است، که از تولیدکنندگان به‌نام خودروهای لوکس و موتورسیکلت در جهان به‌شمار می‌آید. دفتر مرکزی این شرکت در شهر مونیخ قرار دارد. شرکت ب‌اِم‌وِ در سال ۱۹۱۶ توسط فرانتس یوزف پوپ تأسیس شد. این شرکت هم‌اکنون مالک شرکت‌های رولز-رویس موتور کارز و مینی است. در سال ۲۰۱۵ ب‌ام‌و بیش از دو میلیون و چهارصدهزار دستگاه وسیلهٔ نقلیه تولید کرد. امروزه اکثریت سهام بِ‌اِم‌وِ در اختیار خانوادهٔ کوانْدْت قرار دارد (اشتفان کواندت ۲۹٪، و سوزان کوانْدْت کلاتن ۲۱٪). حدود نیمی از سهام این شرکت نیز در بازار بورس فرانکفورت در دسترس عموم سهامداران است. 			</p>-->
+<!--    </div>-->
+<!--    <div class="matn">-->
+<!--      <h2>آئودی</h2>-->
+<!--      <br>-->
+<!--      <img src="assets/image/Audi_logo_detail.svg.png" alt="audi">-->
+<!--      <p>-->
+<!--        آئودی، (به آلمانی: Audi) شرکت خودروسازی آلمانی و تولیدکنندهٔ خودروهای لوکس است، که دفتر مرکزی آن در شهر اینگولشتات، ایالت بایرن، آلمان قرار دارد و مدل‌هایش را در ۹ کارخانه، که در ۸ کشور اروپایی مستقر می‌باشند، تولید می‌نماید. شرکت آئودی در تاریخ ۱۶ ژوئیه ۱۹۰۹ توسط آگوست هورش و در شهر تسویکاو، آلمان تأسیس شد. این شرکت از سال ۱۹۶۴ یکی از زیرمجموعه‌های گروه فولکس‌واگن به‌شمار می‌آید. آئودی همراه با مرسدس بنز و ب ام و سه خودروساز مشهور و لوکس آلمانی هستند و به‌عنوان پرفروش‌ترین خودروسازان لوکس جهان، شناخته می‌شوند. سهام شرکت خودروسازی آئودی در بازار بورس فرانکفورت معامله می‌شود. 			</div>-->
+<!--    <div class="matn">-->
+<!--      <h2>بنــــز</h2>-->
+<!--      <br>-->
+<!--      <img src="assets/image/Mercedes_benz_silverlogo.png" alt="benz">-->
+<!--      <p>-->
+<!--        مرسدس بنز، (به آلمانی: Mercedes-Benz) شرکت خودروسازی آلمانی است، که در زمینه طراحی و ساخت انواع خودرو، کامیون، اتوبوس و موتورهای درون‌سوز، همچنین ارائه خدمات مالی (لیزینگ و بیمه اتومبیل) و نیز تعمیر خودرو فعالیت می‌نماید. شعار این شرکت «یا بهترین یا هیچ» است. کارخانه مرکزی شرکت مرسدس بنز در منطقه زیندل فینگن واقع در شهر [مریانج]] قرار دارد.[۲] این شرکت ادامه قدیمی‌ترین سازنده خودروهای بنزینی در جهان، یعنی دایملر-موتورن-گیزلشافت است، که در سال ۱۸۹۰ توسط گوتلیب دایملر و کارل بنز تأسیس شده بود. شاخه دیگر از مرسدس-بنز، کمپانی دایملر آگ می‌باشد. در سال ۱۹۰۰ گوتلیب دایملر درگذشت و در ۱۹۰۲ پس از انعقاد قراردادی میان ویلهلم مایباخ و امیل جلینک، شرکت دی‌ام‌جی تولید اتومبیل با برند مرسدس، که از ابتدای نام دختر جلینک، یعنی مرسدس جلینک گرفته شده بود را، آغاز کرد. در سال ۱۹۲۶ شرکت دایملر-بنز از ادغام دو شرکت دایملر-موتورن-گیزلشافت و بنز اند سی تأسیس شد و از تاریخ ۲۸ ژوئن ۱۹۲۶ کارخانجات دو شرکت، تولیدات خود را، با برند مرسدس بنز، به بازار عرضه کردند. 			</p>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <div id="sidebar">-->
+<!--    <div class="side1">-->
+<!--      <h3>درباره ما</h3>-->
+<!--      <p>-->
+<!--        وب سایت خودرو با هدف اطلاع رسانی در حوزه خودرو در آذر 92 فعالیت خود را آغاز نموده است. بزرگترین آرزوی ما این است که علاقمندان صنعت خودرو بتوانند تمامی نیازهای خود را در وب سایت "خودرو" بیابند و امیدواریم که بتوانیم اعتماد و توجه تمامی شما عزیزان را به خود جلب کنیم. همواره پذیرای انتقادات و پیشنهادات شما خواهیم بود.-->
+<!--      </p>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <br>-->
+<!--  <div id="sidebar">-->
+<!--    <div class="side1">-->
+<!--      <h3>منوی سریع</h3>-->
+<!--      <ul class="navbar">-->
+<!--        <li><a href="#">صفحه اصلی</a></li>-->
+<!--        <li><a href="#">قاره سازنده</a>-->
+<!--          <ul>-->
+<!--            <li><a href="#">آمریکا</a></li>-->
+<!--            <li><a href="#">اروپا</a></li>-->
+<!--            <li><a href="#">آسیا</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+<!--        <li><a href="#">درباره ما</a></li>-->
+<!--        <li><a href="#">ارتباط با ما</a></li>-->
+<!--      </ul>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <br>-->
+<!--  <div id="sidebar">-->
+<!--    <div class="side1">-->
+<!--      <h3>پیوندها</h3>-->
+<!--      <ul>-->
+<!--        <li><a href="#">سایت ایران خودرو</a></li>-->
+<!--        <li><a href="#">سایپا</a></li>-->
+<!--        <li><a href="#">پارس خودرو</a></li>-->
+<!--        <li><a href="#">مدیران خودرو</a></li>-->
+<!--        <li><a href="#">مدیا موتورز</a></li>-->
+<!--      </ul>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
