--- a/src/app/body/rankings/rankings.component.html
+++ b/src/app/body/rankings/rankings.component.html
@@ -1,1 +1,26 @@
-<p>rankings works!</p>
+<table>
+  <thead>
+  <tr>
+    <th>نام تیم</th>
+    <th>امتیاز</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>پرسپولیس</td>
+    <td>1200</td>
+  </tr>
+  <tr>
+    <td>استقلال</td>
+    <td>1060</td>
+  </tr>
+  <tr>
+    <td>سپاهان</td>
+    <td>1052</td>
+  </tr>
+  <tr>
+    <td>تراکتور</td>
+    <td>985</td>
+  </tr>
+  </tbody>
+</table>
