--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,51 +1,66 @@
-#header{
-  height: 200px;
-  background-color: gray;
-  border-bottom: 5px solid #ADD8E6;
+#header {
+  height: 35px;
+  background-color: lightgray;
+  margin: 0 auto;
+}
+
+#league-header {
+  height: 35px;
+  background-color: black;
+  margin: 0 auto;
 }
 
 #header a{
-  font-size: 32px;
-  display: block;
+  font-size: 20px;
+  /*float: right;*/
+  /*display: block;*/
 }
 
 #header .bigwidth{
   width: 95%;
   margin: 0 auto;
-  padding: 20px 0 0 0;
 }
 
-#header .bigwidth span{
+#header, #league-header .bigwidth span{
   color: yellow;
-}
-
-#header .bigwidth .logo img{
-  width: 348px;
-  max-width: 100%;
-  float: left;
-  margin: -68px 0 0 0px;
-}
-
-#header .bigwidth .logo img:hover{
-  opacity: 0.5;
 }
 
 .bigwidth{
   width: 1300px;
   margin: 0 auto;
-  padding-top: 20px;
+  /*padding-top: 20px;*/
+}
+
+#header .bigwidth .navbar {
+  margin: -35px 115px 0 0;
+  color: black;
+}
+
+#league-header .bigwidth .navbar {
+  margin: 0 10% 0 0;
+  color: lightgray;
 }
 
 #header .bigwidth .navbar li{
   display: inline-block;
 }
 
+#league-header .bigwidth .navbar li{
+  display: inline-block;
+}
+
 #header .bigwidth .navbar li a{
   font-size: 12px;
-  background-color: #555555;
+  /*background-color: #555555;*/
   padding: 5px 20px 5px 20px;
-  margin: 28px 3px 0px 0px;
-  border-radius: 10px 10px 0 0;
+  margin: 0px 3px 0px 0px;
+}
+
+#league-header .bigwidth .navbar li a{
+  font-size: 12px;
+  /*background-color: #555555;*/
+  padding: 5px 20px 5px 20px;
+  margin: 0px 3px 0px 0px;
 }
 
 #header .bigwidth .navbar li a:hover{
@@ -54,7 +69,7 @@
 
 #header .bigwidth .navbar li ul li a{
   font-size:11px;
-  background-color: transparent;
+  /*background-color: transparent;*/
   padding: 9px 5px 3px 5px;
   margin: 2px 15px 2px 19px;
 }
@@ -62,10 +77,10 @@
 #header .bigwidth .navbar li ul{
   position: absolute;
   visibility: hidden;
-  background-color: #555555;
-  border-radius: 8px;
-  box-shadow: inset 0 0 10px 10px #808080;
-  border: 1px solid #DEDEDE;
+  /*background-color: #555555;*/
+  /*border-radius: 8px;*/
+  /*box-shadow: inset 0 0 10px 10px #808080;*/
+  /*border: 1px solid #DEDEDE;*/
   transition: all 2ms linear;
   padding: 0px 0 0 0;
   margin: 4px 44px 0 0;
