--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,29 @@
 <div id="header">
   <div class="bigwidth">
     <a href="#">فوتبال ایران </a>
-    <a class="logo" href="#">
-      <img src="assets/image/logo.svg" alt="web logo">
-    </a>
   </div>
   <div class="bigwidth">
     <ul class="navbar">
       <li><a href="#">صفحه اصلی</a></li>
-      <li><a href="#">قاره سازنده</a>
-        <ul>
-          <li><a href="#">آمریکا</a></li>
-          <li><a href="#">اروپا</a></li>
-          <li><a href="#">آسیا</a></li>
-        </ul>
-      </li>
+<!--      <li><a href="#">لیگ ها</a></li>-->
+      <li><a href="#">پخش زنده</a></li>
       <li><a href="#">درباره ما</a></li>
       <li><a href="#">ارتباط با ما</a></li>
+      <li><a href="#">ورود / ثبت نام</a></li>
+    </ul>
+  </div>
+<!--  <a class="logo" href="#">-->
+<!--    <img src="assets/image/logo.svg.png" alt="web logo">-->
+<!--  </a>-->
+</div>
+<div id="league-header">
+  <div class="bigwidth">
+    <ul class="navbar">
+      <li><a href="#">لیگ برتر</a></li>
+      <li><a href="#">لیگ قهرمانان</a></li>
+      <li><a href="#">جام حذفی</a></li>
+      <li><a href="#">لیگ فوتسال</a></li>
+      <li><a href="#">لیگ بانوان</a></li>
     </ul>
   </div>
 </div>
