--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -5,7 +5,9 @@
 }
 
 .bigwidth .baner{
-  width: 99%;
+  width: 60%;
+  margin-right: 20%;
+  align: center;
   border: #DDDDDD 10px solid;
   border-radius: 8px;
 }
@@ -18,6 +20,7 @@
   box-sizing: border-box;
   box-shadow: 1px 1px 2px 2px #808080;
   margin: 30px auto;
+  text-align: center;
 }
 
 #rankings {
@@ -28,6 +31,7 @@
   box-sizing: border-box;
   box-shadow: 1px 1px 2px 2px #808080;
   margin: 30px auto;
+  text-align: center;
 }
 #featured {
   width: 55%;
@@ -39,6 +43,7 @@
   box-shadow: 1px 1px 2px 2px #808080;
   margin: 30px auto;
   margin-right: 45px;
+  text-align: center;
 }
 #content{
   width: 900px;
