--- a/src/app/body/featured/featured.component.html
+++ b/src/app/body/featured/featured.component.html
@@ -1,1 +1,5 @@
-<p>featured works!</p>
+<div>
+    <a class="featured-logo" href="#">
+      <img src="assets/image/featured.jpg" alt="web logo">
+    </a>
+</div>
