--- a/src/app/body/featured/featured.component.html
+++ b/src/app/body/featured/featured.component.html
@@ -2,4 +2,7 @@
     <a class="featured-logo" href="#">
       <img src="assets/image/featured.jpg" alt="web logo">
     </a>
+    <a class="premier-logo" href="#">
+      <img src="assets/image/premier.jpg" alt="web logo">
+    </a>
 </div>
