--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,9 @@
       <li><a href="#">پخش زنده</a></li>
       <li><a href="#">درباره ما</a></li>
       <li><a href="#">ارتباط با ما</a></li>
-      <li><a href="#">ورود / ثبت نام</a></li>
+      <li>
+        <a href="#">ورود / ثبت نام</a>
+      </li>
     </ul>
   </div>
 <!--  <a class="logo" href="#">-->
